--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,9 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(202400111_EDD_Practica main.cpp
         ListaSimple.h
         Nodo.h
-        ListaDoble.h)
+        ListaDoble.h
+        ListaCircular.h
+        Fila.h
+        Pila.h
+        ListaCircularDoble.h
+        NodoDoble.h)
