[ADD] Carga de Archivos
Ya tenemos:
- Carga correcta de aviones
- Carga correcta de pasajeros
- Procesamiento de movimientos
- Consulta por pasaporte funcionando
- Limpieza de datos del JSON sin errores
- Sin problemas de funciones duplicadas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,8 @@ add_executable(202400111_EDD_Practica main.cpp
         ColaPasajeros.h
         PilaEquipaje.h
         ListaCircularAviones.h
-        ListaDoblePasajeros.h)
+        ListaDoblePasajeros.h
+        CargadorAviones.h
+        CargadorPasajeros.h
+        CargadorCambios.h
+        Utilidades.h)
